# input-lag-tests

wgpu-sdl2/: Cargo.toml
wgpu-sdl2/src/: main.rs  shader.wgsl  vertex.rs
wgpu-winit/: Cargo.toml
wgpu-winit/src/: main.rs
