[package]
name = "wgpu-sdl2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
glam = { version = "0.24.1", features = ["bytemuck"] }
pollster = "0.3.0"
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", rev = "9b16758", features = [
	"raw-window-handle",
] }
wgpu = "0.17.0"
